<resources>


    <!--    string for pet feeding app-->
    <string name="Title_app">Pets feeding</string>
    <string name="app_name">pet_feeding</string>
    <string name="title_home">Home</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_home">Hi Username!</string>
    <string name="pets">Pets</string>
    <string name="AddPet">Add A Pet</string>
    <string name="products">Products</string>
    <string name="add_device">Connect Device</string>
    <string name="input_hint_username">Username</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_con_password">Confirm Password</string>
    <string name="input_hint_code">Verify Code</string>
    <string name="nav_sign_in">Sign In</string>
    <string name="nav_sign_up">Sign Up</string>
    <string name="nav_forget_password">Forgot Password</string>

    <!-- Setting Activity string -->
    <string name="manage_account">Manage Account</string>
    <string name="notifications">Notifications</string>
    <string name="time_format">Time Format</string>
    <string name="help">Help</string>
    <string name="Device">Device</string>
    <string name="logout">Logout</string>
    <string name="version">Version 1.0</string>
    <string name="feed_now">Feed Now</string>
    <string name="schedule">Schedule</string>
    <string name="total_food">Total food:</string>
    <string name="grams">g</string>
    <string name="amount_of_food">0</string>
    <string name="hint_text_feeding_amount">Feeding Amount</string>
    <string name="Repeat">everyday</string>
    <string name="connect_device_to_internet">Connect device to internet</string>
    <string name="available_network">Available network</string>
    <string name="password_wifi">Password</string>

    <!-- Create card schedule   -->
    <string name="Time">Time</string>
    <string name="FoodValue">Food values(g)</string>


    <string name="weight">Weight</string>
    <string name="PetWeight">Pet Weight:</string>
</resources>