<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment"
    android:background="@drawable/long_round_rectangle"
    android:backgroundTint="@color/white"
    android:padding="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        >


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account Setting"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/Primary_pink"
        />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/bt_manage_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/manage_account"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/bt_notification"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/notifications"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="20dp"
            />


            <Button
                android:id="@+id/bt_time_format"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/time_format"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="20dp"

                />



        <Button
            android:id="@+id/bt_help"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/help"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp"
            >
            <Button
                android:id="@+id/bt_legal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/legal"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="20dp"
                />
            <Button
                android:id="@+id/bt_logout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="20dp"
                />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="version 1.0"
                android:textAlignment="center"
                android:paddingTop="15dp"
                />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>