<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Primary_pink"
    android:orientation="vertical"
    android:paddingHorizontal="35dp"
    android:paddingVertical="45dp">

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingBottom="20dp"
        android:src="@drawable/mainlogo" />

    <TextView
        android:id="@+id/sign_up_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_logo"
        android:text="Create"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        android:background="@drawable/half_background"/>
    <TextView
        android:id="@+id/sign_up_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_title_1"
        android:text="Account"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        android:background="@drawable/half_background"/>

    <LinearLayout
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_title_2"
        android:paddingVertical="25dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_username"
            android:textColorHint="@color/white_50p"
            android:paddingVertical="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:textColor="@color/white"
                android:maxLength="16"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_email"
            android:textColorHint="@color/white_50p"
            android:paddingVertical="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_password"
            android:textColorHint="@color/white_50p"
            android:paddingVertical="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_con_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_con_password"
            android:textColorHint="@color/white_50p"
            android:paddingVertical="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_form">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_sign_up"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_baseline_arrow_forward_24" />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <FrameLayout
            android:id="@+id/sign_in_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="30dp"
            android:paddingVertical="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:background="@drawable/half_background_sm"/>
        </FrameLayout>
    </FrameLayout>
</RelativeLayout>