<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_pink"
    android:orientation="vertical"
    android:paddingHorizontal="35dp"
    android:paddingVertical="45dp">

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingBottom="20dp"
        android:src="@drawable/mainlogo" />

    <TextView
        android:id="@+id/sign_in_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_logo"
        android:background="@drawable/half_background"
        android:text="Welcome"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_in_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_title_1"
        android:background="@drawable/half_background"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_title_2"
        android:orientation="vertical"
        android:paddingVertical="25dp"
        android:paddingTop="55dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_email"
            android:paddingVertical="5dp"
            android:textColorHint="@color/white_50p"
            android:visibility="invisible"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:maxLength="16"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_email"
            android:paddingVertical="5dp"
            android:textColorHint="@color/white_50p"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_password"
            android:paddingVertical="5dp"
            android:textColorHint="@color/white_50p"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_toggle"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:textColor="@color/error_color"
            android:textSize="12dp"
            android:visibility="gone"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_form">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_sign_in"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:textStyle="bold" />
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:trackColor="@color/secondary_darkPink"
            app:indicatorColor="@color/Primary_pink"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_baseline_arrow_forward_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <FrameLayout
            android:id="@+id/sign_up_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingVertical="7dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/half_background_sm"
                android:text="@string/nav_sign_up"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/forget_password_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:paddingVertical="7dp"
            android:paddingStart="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/half_background_sm"
                android:text="@string/nav_forget_password"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>